# PIfotainment

./: .gitattributes  .gitignore  Cargo.toml  __main__.py  fullsend.sh  pifotainment.kv  send.sh
currentlyplaying/: musicinfo.py  spotify.py
currentlyplaying/shairport/: __main__.py  decoder.py
node/: PIfotainment.code-workspace  package.json
node/dist 2/: builder-effective-config 2.yaml
node/node_modules_old/: .package-lock.json
node/node_modules_old/.bin/: daap-parser
node/public/: index.html  main.js
node/src/: App.js  App.scss
node/src/elements/dashedline/: dashedline.jsx  dashedline.scss
node/src/elements/music/: music.jsx
node/src/elements/scroller/: scroller.jsx  scroller.scss
node/src/elements/solidline/: solidline.jsx  solidline.scss
node/src/widgets/: global.scss  widget.scss
node/src/widgets/mainBlock/: mainblock.jsx  mainblock.scss
node/src/widgets/nowplaying/: nowplaying.jsx  nowplaying.scss
node/src/widgets/weather/: sayings.js  weather.jsx  weather.scss
node/src/widgets/weather/forecastIcon/: forecast.jsx  forecast.scss
src/: main.rs
src/weather/: mod.rs
