[package]
name = "PIfotainment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
eframe = "0.17.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.31"
ureq = "2.4.0"
